--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "description": "Nexa House - Buy and rent properties with cryptocurrency",
   "scripts": {
-    "sass": "sass scss/styles.scss css/styles.css",
+    "sass": "sass scss/styles.scss css/styles.css --watch",
     "sass:build": "sass scss/styles.scss css/styles.css --style=compressed --no-source-map",
     "serve": "npx serve .",
     "dev": "npm-run-all --parallel sass serve",
-    "build": "npm run sass:build",
+    "build": "npm run sass:build && npm run build:js",
+    "build:js": "npm run build:js:en && npm run build:js:hi",
+    "build:js:en": "esbuild js/main.js --bundle --outfile=dist/main.en.js --minify --define:LANGUAGE='\"en\"'",
+    "build:js:hi": "esbuild js/main.js --bundle --outfile=dist/main.hi.js --minify --define:LANGUAGE='\"hi\"'",
     "sitemap": "./scripts/generate-sitemap.sh",
     "robots": "./scripts/generate-robots.sh",
-    "seo": "npm run sitemap && npm run robots"
+    "seo": "npm run sitemap && npm run robots",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "keywords": [
     "nexa",
@@ -24,8 +28,9 @@
   "author": "Nexa",
   "license": "MIT",
   "devDependencies": {
+    "esbuild": "^0.19.12",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.69.5",
-    "serve": "^14.2.1",
-    "npm-run-all": "^4.1.5"
+    "serve": "^14.2.1"
   }
 }
